TEST_PROGRAMS/VALID/05/capital_x_in_hex.go
/* Capital 'x' in hexidecimal. */

package main

var x int = 0X5

func main() {
	// Do nothing
}
