TEST_PROGRAMS/INVALID/05/invalid_hex_digit.go
/* Invalid hexidecimal digit */

package main

var h int = 0xG // Error: Not a hexidecimal digit

func main() {
	// Do nothing
}
